First button works

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<h1>Mega Mondrian: An Interactive Art Piece</h1>
 	<div id="wrapper">
-	<div id="painting">
+	<div id="painting" class="">
 
 		<div id="top-row">
 			<div id="medium-box" class= "blue right tropical"></div>
