--- a/index.html
+++ b/index.html
@@ -13,38 +13,38 @@
 <body>
 	<h1>Mega Mondrian: An Interactive Art Piece</h1>
 	<div id="wrapper">
-	<div id="painting" class="">
+	<div id="painting">
 
 		<div id="top-row">
-			<div id="medium-box" class= "blue right tropical"></div>
+			<div id="medium-box" class= "blue right"></div>
 			<div id="short-divider1" class= "black right"></div>
-			<div id="wide-box" class= "beige right tropical active"></div>
-			<div id="short-divider2" class= "black right" active></div>
-			<div id="medium-box" class= "second blue right tropical"></div>
+			<div id="wide-box" class= "beige right"></div>
+			<div id="short-divider2" class= "black right"></div>
+			<div id="medium-box" class= "second blue right"></div>
 
 			<div id="long-divider" class="black right"></div>
 		</div>
 
 		<div id="bottom-right-row">
-			<div id="huge-box" class= "red right tropical"></div>
+			<div id="huge-box" class= "red right"></div>
 			<div id="vertical-divider1" class= "black right"></div>
-			<div id="large-box" class="yellow right tropical"></div>
+			<div id="large-box" class="yellow right"></div>
 			
 			<div id="horizontal-divider1" class= "black right"></div>
-			<div id="short-box" class="beige right tropical"></div>
+			<div id="short-box" class="beige right"></div>
 			<div id= "teeny-divider1" class= "black right"></div>
-			<div id="teeny-box" class="blue right tropical"></div>
+			<div id="teeny-box" class="blue right"></div>
 		</div>
 
 		<div id="bottom-left-row">
 			<div id="vertical-divider2" class= "black right"></div>
-			<div id="medium-box2" class="beige left tropical"></div>
+			<div id="medium-box2" class="beige left"></div>
 			<div id="short-divider3" class="black left"></div>
-			<div id="medium-box3" class="red left tropical"></div>
+			<div id="medium-box3" class="red left"></div>
 			<div id="short-divider4" class="black left"></div>
-			<div id="teeniest-box" class="beige left tropical"></div>
+			<div id="teeniest-box" class="beige left"></div>
 			<div id="teeniest-divider" class="black left"></div>
-			<div id="teeniest-box2" class="beige left tropical"></div>
+			<div id="teeniest-box2" class="beige left"></div>
 
 		</div>
 </div>
