--- a/index.html
+++ b/index.html
@@ -16,35 +16,38 @@
 	<div id="painting">
 
 		<div id="top-row">
-			<div id="medium-box" class= "blue right"></div>
+			<div id="medium-box" class= "blue right square"></div>
 			<div id="short-divider1" class= "black right"></div>
-			<div id="wide-box" class= "beige right"></div>
+			<div id="wide-box" class= "beige right square"></div>
 			<div id="short-divider2" class= "black right"></div>
-			<div id="medium-box" class= "second blue right"></div>
+			<div id="medium-box-half" class= "second blue right square"></div>
 
 			<div id="long-divider" class="black right"></div>
 		</div>
 
 		<div id="bottom-right-row">
-			<div id="huge-box" class= "red right"></div>
+		<!-- I left the square class out of huge box div for the video embed -->
+			<div id="huge-box" class= "red right">
+				<div id="sweet-video"></div>
+			</div>
 			<div id="vertical-divider1" class= "black right"></div>
-			<div id="large-box" class="yellow right"></div>
+			<div id="large-box" class="yellow right square"></div>
 			
 			<div id="horizontal-divider1" class= "black right"></div>
-			<div id="short-box" class="beige right"></div>
+			<div id="short-box" class="beige right square"></div>
 			<div id= "teeny-divider1" class= "black right"></div>
-			<div id="teeny-box" class="blue right"></div>
+			<div id="teeny-box" class="blue right square"></div>
 		</div>
 
 		<div id="bottom-left-row">
 			<div id="vertical-divider2" class= "black right"></div>
-			<div id="medium-box2" class="beige left"></div>
+			<div id="medium-box2" class="beige left square"></div>
 			<div id="short-divider3" class="black left"></div>
-			<div id="medium-box3" class="red left"></div>
+			<div id="medium-box3" class="red left square"></div>
 			<div id="short-divider4" class="black left"></div>
-			<div id="teeniest-box" class="beige left"></div>
+			<div id="teeniest-box" class="beige left square"></div>
 			<div id="teeniest-divider" class="black left"></div>
-			<div id="teeniest-box2" class="beige left"></div>
+			<div id="teeniest-box2" class="beige left square"></div>
 
 		</div>
 </div>
@@ -56,7 +59,7 @@
 <div id="multiple_buttons">
 	<button class="button" id="hella_original">Original</button>
 	<button class="button" id="hella_tropical">Tropical</button>
-	<button class="button" id="wild_card">Wild Card</button>
+	<button class="button" id="wild-card">Wild Card</button>
 </div>
 
 	<script src="script.js" type="text/javascript"></script>
