--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
 </div>
 
 	<div class="clear-fix"></div>
-	<h2>Choose between three styles to change the layout of Mondrian Art Piece:</h2>
+	<h2>Choose between three styles to change the color layout of the Mondrian Art Piece:</h2>
 
 <div id="multiple_buttons">
 	<button class="button" id="hella_original">Original</button>
 	<button class="button" id="hella_tropical">Tropical</button>
+	<button class="button" id="green-thumb">Green Thumb</button>
 	<button class="button" id="wild-card">Wild Card</button>
 </div>
 
